Spacing fix

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-top: 100px;
+  margin-top: 75px;
 }
 
 .name {
@@ -68,7 +68,7 @@ body {
   text-transform: uppercase;
   overflow: hidden;
   cursor: pointer;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .shuffle:hover {
